--- a/notebooks/report.ipynb
+++ b/notebooks/report.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Replication Project\n",
+    "This project structures a DS project that replicate the analysis of a genetical research paper. Although this project only implements the overall structure and its access to data currently, we expect it performs full functionality at the end.\n",
+    "<br/><br/>\n",
+    "# Running the project\n",
+    "This project can be simply runned by commend line python run.py data. According to the data argument, the main function in run.py will load the stored path in config/data_params.json and use those paths to access the main dataset. The result of all filenames in dataset will be printted to store in an output.txt file."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
